--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -214,10 +214,24 @@
   right: 100px;
   background: rgb(252, 67, 0);
   border: none;
-  font-size: 1.3rem;
+  font-size: 1rem;
   cursor: pointer;
   color: white; 
-  border-radius: 70px;
+  border-radius: 80px;
+}
+
+.closeButton2 {
+  position: absolute;
+  top: 20px;
+  left: 20px; 
+  align-content: center;
+  background: rgb(39, 170, 206);
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  color: white; 
+  border-radius: 80px;
+  padding: 8px; 
 }
 
 .closeButton:hover {
@@ -233,13 +247,35 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   background: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
+}
+
+.modalScore {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  overflow-y: auto;
+}
+
+
+.modalContent {
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  max-width: 90vw;
+  max-height: 90vh;
+  margin: auto;
+  overflow-y: auto;
 }
 
 @media (max-width: 768px) {
