--- a/src/frontend/pages/FeedPage/newDiscussionBoard.module.css
+++ b/src/frontend/pages/FeedPage/newDiscussionBoard.module.css
@@ -4,7 +4,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     color: #ffffff;
-    max-width: 89%;
+    max-width: 95%;
     width: 1100px; 
   }
   
@@ -23,7 +23,79 @@
   .commentSection {
     margin-bottom: 30px;
   }
+
+  .responseAuthor{
+    font-style: italic;
+    color: #4a90e2;
+    text-align: right;
+    font-size: 1rem;
+  }
+
+  .responseInput{
+    padding: 8px 12px;
+    background-color: #333;
+    border: 1px solid #4a90e2;
+    border-radius: 5px;
+    margin-right: 10px;
+    color: #ffffff;
+    width: 80%; 
+    font-size: 0.9em;
+  }
+
+  .projectSelect{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 10px; 
+    color: rgb(188, 188, 188); 
+    background-color: #323232;
+    border: 1px solid #4a90e2;
+    border-radius: 8px;
+    padding: 2px; 
+    height: 34px; 
+  }
   
+  .toggleResponsesButton{
+    padding: 8px 15px;
+    background-color: #4a90e2;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 0.9em;
+    font-weight: bold;
+  }
+
+  .submitButton{ 
+    padding: 6px;
+    background-color: #4a90e2;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin-left: 10px; 
+  }
+
+  .openProjectButton{
+    padding: 8px 15px;
+    background-color: #4a90e2;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 0.9em;
+    font-weight: bold;
+  }
+
+  .toggleResponsesButton:hover {
+    background-color: #2a669a;
+  }
+
   .commentTitle {
     font-size: 1.3em;
     margin-bottom: 15px;
@@ -49,7 +121,7 @@
   }
   
   .commentCard:hover {
-    transform: translateX(5px);
+    transform: translateX(2px);
   }
   
   .commentText {
@@ -93,7 +165,8 @@
     font-style: italic;
     color: #4a90e2;
     text-align: right;
-    font-size: 0.85em;
+    font-weight: bolder;
+    font-size: 1rem;
   }
   
   .commentInputContainer {
