--- a/src/frontend/pages/GroupsPage/groupMembers.module.css
+++ b/src/frontend/pages/GroupsPage/groupMembers.module.css
@@ -16,7 +16,7 @@
   }
   
   .memberItem {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #3c3c3c;
   }
   
   .memberItem:last-child {
