adding web to CTA on welcome

--- a/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
+++ b/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
@@ -172,3 +172,48 @@ body, html {
     z-index: 1;
     overflow: hidden;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .modalContent {
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    max-width: 90vw;
+    max-height: 90vh;
+    margin: auto;
+    overflow-y: auto;
+  }
+  
+  .closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
+  .closeButton{
+    position: absolute;
+    top: 20px;
+    left: 20px; 
+    align-content: center;
+    background: rgb(39, 122, 206);
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    color: white; 
+    border-radius: 80px;
+    padding: 8px; 
+  }
