--- a/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
+++ b/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
@@ -188,7 +188,7 @@
 
 /* Updated styles for code display */
 .codeContainer {
-  background-color: #fcfbfb;
+  background-color: #282c34;
   border-radius: 8px;
   margin: 0.5rem;
   overflow: hidden;
@@ -211,13 +211,12 @@
   flex-direction: column;
   align-items: flex-end;
   padding: 1.4rem 10px 0.5rem 0;
-  border-right: 1px solid #ddd;
-  color: #999;
+  color: #d3d3d3;
   user-select: none;
   text-align: right;
   min-width: 25px; /* Ensure enough space for line numbers */
-  background-color: #f5f5f5;
   gap: 1.16px; 
+  margin-left: 2px;
 }
 
 .lineNumbers span {
