--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -142,12 +142,20 @@
   display: flex;
   gap: 20px;
   margin-bottom: 20px;
-  min-height: 200px;
+  min-height: 120px;
   max-height: 250px;
 }
 
 .descAndPreviewContainer:hover {
   cursor: pointer;
+}
+
+.fullWidthDesc {
+  flex-direction: column;
+}
+
+.fullWidthDesc .descContainer {
+  width: 100%;
 }
 
 .moreButton {
@@ -159,7 +167,6 @@
 
 .descContainer {
   flex: 1;
-  width: 50%;
   position: relative;
   overflow: hidden;
 }
@@ -176,6 +183,11 @@
   margin-right: 20px;
   font-family: 'Lato';
   font-size: 18px;
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .description::after {
@@ -184,7 +196,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px;
+  height: 25px;
   background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
 }
 
@@ -273,7 +285,7 @@
   background-color: #333333;
   padding: 10px 15px;
   border-radius: 8px;
-  margin: 40px 0 15px 0;
+  margin: 20px 0 15px 0;
   transition: background-color 0.2s ease;
 }
 
@@ -361,12 +373,13 @@
   border-radius: 8px;
   max-height: 300px;
   overflow-y: auto;
-  min-width: 600px;
+  min-width: 100%;
+  overflow-x: auto;
 }
 
 .codePreview {
   margin: 0;
-  padding: 16px;
+  padding: 5px;
 }
 
 .codePreview code {
