small ui changes

--- a/src/frontend/components/AddProjectComponent/addProject.module.css
+++ b/src/frontend/components/AddProjectComponent/addProject.module.css
@@ -495,7 +495,7 @@
   }
   
   .modal {
-    background: white;
+    background: rgb(49, 49, 49);
     padding: 20px;
     border-radius: 8px;
     max-width: 400px;
