--- a/src/frontend/pages/StudentProfilePage/studentProfile.module.css
+++ b/src/frontend/pages/StudentProfilePage/studentProfile.module.css
@@ -1,8 +1,4 @@
 
-
-
-
-
 * {
     font-family: inconsolata; 
   }
@@ -71,17 +67,17 @@
     display: inline-block;
     font-family: 'inconsolata';
     font-weight: bolder; 
-    margin-right: 5px; /* Adjust margin to make buttons less wide */
+    margin-right: 20px; /* Adjust margin to make buttons less wide */
     margin-bottom: 10px;
     margin-top: 10px; 
-    background-color: #37485c;
+    background-color: #2d3743;
     color: #D9D9D9;
     border: none;
     border-radius: 80px;
     cursor: pointer;
     height: 60px;
     width: calc(100% / 2 - 30px); /* Adjusted calculation */
-    font-size: 20px;
+    font-size: 18px;
     margin-left: 20px; /* Adjust margin to make buttons less wide */
     transition: background-color 0.3s ease;
     display: inline-flex;
