--- a/src/frontend/components/NavigationBar.module.css
+++ b/src/frontend/components/NavigationBar.module.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap"); 
 @import url("https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap");
 .nav {
-  background: linear-gradient(90deg, #2b2b2b 40%, #121212 75%);
+  background: linear-gradient(90deg, rgba(43, 43, 43, 0.4) 40%, rgba(18, 18, 18, 0.4) 75%);
   border: 1px solid #1a1a1a;
   padding: 17px 10px;
   display: flex;
