--- a/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
+++ b/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
@@ -19,7 +19,8 @@ body, html {
   border-radius: 24px;
   box-shadow: 0 0 20px rgba(0, 11, 31, 0.4);
   max-width: 600px;
-  margin: 0 auto; /* Add this line to center the div horizontally */
+  margin: auto; /* Add this line to center the div horizontally */
+  margin-top: 10vh; 
 }
 
 .title {
@@ -40,7 +41,7 @@ body, html {
 }
 
 .subtitle {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin-bottom: 1rem;
   color: #E0E0E0;
   margin-top: 0px;
