--- a/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
+++ b/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
@@ -15,7 +15,7 @@ body, html {
   min-height: auto;
   box-sizing: border-box;
   backdrop-filter: blur(10px);
-  background-color: rgba(45, 45, 45, 0.3) !important;
+  background-color: rgba(45, 45, 45, 0.0) !important;
   border-radius: 24px;
   box-shadow: 0 0 20px rgba(0, 11, 31, 0.4);
   max-width: 600px;
@@ -23,29 +23,51 @@ body, html {
   margin-top: 10vh; 
 }
 
+.bigContainer{
+  padding: 40px;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+}
+
 .title {
-  font-size: 2rem;
+  font-size: 2.2rem;
   margin-bottom: 1rem;
   color: #E0E0E0;
   margin-top: 0px;
+  letter-spacing: 2px;
+  font-weight: 700;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(45deg, #E0E0E0, #6da6e7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  margin-top: 20px;
+}
+
+.subtitle {
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+  color: #E0E0E0;
+  margin-top: 0px;
+  font-weight: 300;
+  line-height: 1.4;
+  text-align: center;
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
-  background-color: #2D2D2D;
+  background-color: #1e1e1e;
   border-radius: 10px;
   padding: 1.5rem;
   margin-bottom: 1rem;
   width: 100%;
   max-width: 400px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(75, 88, 112, 0.7);
 }
 
-.subtitle {
-  font-size: 1.3rem;
-  margin-bottom: 1rem;
-  color: #E0E0E0;
-  margin-top: 0px;
-}
 
 .form {
   display: flex;
@@ -85,12 +107,34 @@ body, html {
   background-color: #3A7BCE;
 }
 
-.backButton {
-  background-color: transparent;
-  border: 2px solid #4A90E2;
-  color: #4A90E2;
-  padding: 0.5rem 1rem;
+.submitButton {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px; 
+  font-weight: bolder;
+  justify-content: center;
+  background-color: #6da6e7;
+  color: white;
+  border: none;
   border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submitButton:hover {
+  background-color: #3A7BCE;
+}
+
+.backButton {
+  background-color: #6da6e7;
+  border: 2px solid #2e5a81;
+  color: #f2f2f3;
+  font-weight: bolder;
+  font-size: .8rem;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
   cursor: pointer;
   transition: all 0.3s;
 }
