--- a/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
+++ b/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
@@ -19,22 +19,23 @@ body, html {
   border-radius: 24px;
   box-shadow: 0 0 20px rgba(0, 11, 31, 0.4);
   max-width: 600px;
-  margin: auto; /* Add this line to center the div horizontally */
+  margin: auto;
   margin-top: 10vh; 
 }
 
-.bigContainer{
+.bigContainer {
   padding: 40px;
   display: flex; 
   flex-direction: column;
   align-items: center;
+  margin-top: 100px; 
 }
 
 .title {
   font-size: 2.2rem;
   margin-bottom: 1rem;
   color: #E0E0E0;
-  margin-top: 0px;
+  margin-top: 20px;
   letter-spacing: 2px;
   font-weight: 700;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
@@ -42,7 +43,6 @@ body, html {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  margin-top: 20px;
 }
 
 .subtitle {
@@ -68,7 +68,6 @@ body, html {
   box-shadow: 0 0 20px rgba(75, 88, 112, 0.7);
 }
 
-
 .form {
   display: flex;
   flex-direction: column;
@@ -79,32 +78,24 @@ body, html {
 }
 
 .inputText {
-  width: 95%;
+  width: 100%;
   padding: 0.75rem;
-  border: none;
+  border: 1px solid #3C3C3C;
   border-radius: 5px;
-  background-color: #3C3C3C;
+  background-color: #2C2C2C;
   color: #E0E0E0;
   font-size: 1rem;
+  box-sizing: border-box;
+}
+
+.inputText:focus {
+  outline: none;
+  border-color: #6da6e7;
+  box-shadow: 0 0 0 2px rgba(109, 166, 231, 0.2);
 }
 
 .inputText::placeholder {
   color: #A2A2A2;
-}
-
-.button {
-  background-color: #6da6e7;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.button:hover {
-  background-color: #3A7BCE;
 }
 
 .submitButton {
@@ -144,29 +135,64 @@ body, html {
   color: white;
 }
 
+.refButton {
+  background-color: #5685ba;
+  border: 2px solid #2e5a81;
+  color: #f2f2f3;
+  font-weight: bolder;
+  font-size: .8rem;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s;
+  margin-top: 1rem; 
+}
+
+.refButton:hover {
+  background-color: #4A90E2;
+  color: white;
+}
+
 .errorText {
   color: #FF6B6B;
   margin-top: 0.5rem;
 }
 
 .successText {
-  display: flex;
   color: #4CAF50;
   margin-top: 0.5rem;
-  justify-content: center;
+  text-align: center;
 }
 
 .referralSection {
-  margin-top: 2rem;
-  padding-top: 1rem;
-  border-top: 1px solid #3C3C3C;
+  position: fixed;
+  top: 150%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 500px;
+  background-color: #1e1e1e;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  transition: top 0.5s ease-in-out;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.referralSection.show {
+  top: 50%;
+  opacity: 1;
+  visibility: visible;
+  width: 80vw; 
+  border-radius: 20px; 
 }
 
 .referralTitle {
   font-size: 1.2rem;
   color: #E0E0E0;
   margin-bottom: 0.5rem;
-  margin-top: 0px;
 }
 
 .referralExplainer {
@@ -207,4 +233,46 @@ body, html {
 
 .copyButton:hover {
   background-color: #3A7BCE;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  color: #E0E0E0;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.closeButton:hover {
+  color: #FF6B6B;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+  z-index: 999;
+}
+
+.overlay.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.buttonContainer{
+  display: inline-flex;
+  justify-content: space-between;
+  width: 300px;
+  margin-top: 1rem;
 }
