--- a/src/frontend/pages/JobsPage/jobsPage.module.css
+++ b/src/frontend/pages/JobsPage/jobsPage.module.css
@@ -23,23 +23,23 @@
 }
 
 .card {
-  background-color: #393939;
-  color: #ffffff;
+  background-color: #393939 !important;
   transition: all 0.3s ease-in-out;
+  margin-top: 20px; 
   margin-bottom: 20px;
   border-radius: 12px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   width: 100%;
   overflow: hidden;
 }
 
 .card:hover {
-  transform: translateY(-8px);
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
 }
 
 .cardContent {
+  background-color: #393939;
   padding: 24px;
+  border-radius: 20px;
 }
 
 .title {
@@ -81,6 +81,7 @@
 }
 
 .applyButton {
+  margin-top: 20px !important;
   background-color: #4fc3f7;
   color: #121212;
   padding: 10px 20px;
