--- a/src/frontend/components/NotificationsComponent.module.css
+++ b/src/frontend/components/NotificationsComponent.module.css
@@ -4,15 +4,15 @@
   }
   
   .notificationButton {
-    background: #333;
-    border: none;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.1);
     cursor: pointer;
     padding: 8px;
     border-radius: 50%;
     display: flex;
     align-content: center;
     transition: background-color 0.3s;
-    margin-top: 7px; 
+    margin-top: 3px; 
   }
   
   .notificationButton:hover {
