--- a/src/frontend/pages/FeedPage/feed.module.css
+++ b/src/frontend/pages/FeedPage/feed.module.css
@@ -23,7 +23,8 @@ body {
  background-color: none;
 }
 .headerBox {
-  background-color: var(--header-bg-color);
+  background-color: #1a1a1a;
+  border: 1px solid #3c3c3c;
   border-radius: 12px;
   padding: 15px 20px;
   width: calc(100% - 70px);
