--- a/src/frontend/components/portfolioDisplay.module.css
+++ b/src/frontend/components/portfolioDisplay.module.css
@@ -16,9 +16,15 @@
 
 .projectsTitle {
   position: sticky;
-  top: 0;
+  border-left: 4px solid transparent;
+  border-image: linear-gradient(to bottom, rgba(0, 132, 255, 0.8), rgba(0, 132, 255, 0.0)) 1;
+  border-radius: 80px;
+  border-image-slice: 1;
+  border-image-outset: 1px;  top: 0;
   z-index: 1;
-  background-image: linear-gradient(to bottom, #33383c, rgba(41, 48, 55, 0.4));  
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background-image: linear-gradient(to bottom, rgba(46, 46, 46, 0.4), rgba(30, 30, 30, 0.0)); 
   padding: 20px;
   color: white; 
   font-family: "Inconsolata", system-ui;
