--- a/src/frontend/pages/JobsPage/jobsPage.module.css
+++ b/src/frontend/pages/JobsPage/jobsPage.module.css
@@ -15,12 +15,12 @@
 .card {
   background-color: #393939 !important;
   transition: all 0.3s ease-in-out;
-  margin-top: 20px; 
   margin-bottom: 0px;
   border-radius: 15px !important;
   width: 100%;
   padding: 5px; 
   overflow: hidden;
+  margin-top: 20px;
 }
 
 .card:hover {
@@ -36,10 +36,20 @@
 .title {
   font-family: "Roboto", sans-serif;
   color: #ffffff;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: bolder;
   margin-bottom: 12px;
   letter-spacing: 2px;
+  text-align: left;
+}
+
+.titleTop {
+  font-family: "Roboto", sans-serif;
+  color: #ffffff;
+  font-size: 1.9rem;
+  font-weight: bolder;
+  margin-bottom: 20px;
+  letter-spacing: 5px;
   text-align: left;
 }
 
@@ -88,4 +98,18 @@
 .applyButton:hover {
   background-color: #03a9f4;
   transform: scale(1.05);
+}
+
+.loadingContainer,
+.errorContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  text-align: center;
+}
+
+.errorContainer {
+  color: #f44336;
 }
