--- a/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
+++ b/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
@@ -15,35 +15,57 @@ body, html {
   min-height: auto;
   box-sizing: border-box;
   backdrop-filter: blur(10px);
-  background-color: rgba(45, 45, 45, 0.3) !important;
+  background-color: rgba(45, 45, 45, 0.0) !important;
   border-radius: 24px;
   box-shadow: 0 0 20px rgba(0, 11, 31, 0.4);
   max-width: 600px;
-  margin: 0 auto; /* Add this line to center the div horizontally */
+  margin: auto;
+  margin-top: 10vh; 
+}
+
+.bigContainer {
+  padding: 40px;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px; 
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 2.2rem;
   margin-bottom: 1rem;
   color: #E0E0E0;
+  margin-top: 20px;
+  letter-spacing: 2px;
+  font-weight: 700;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(45deg, #E0E0E0, #6da6e7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.subtitle {
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+  color: #E0E0E0;
   margin-top: 0px;
+  font-weight: 300;
+  line-height: 1.4;
+  text-align: center;
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
-  background-color: #2D2D2D;
+  background-color: #1e1e1e;
   border-radius: 10px;
   padding: 1.5rem;
   margin-bottom: 1rem;
   width: 100%;
   max-width: 400px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.subtitle {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-  color: #E0E0E0;
-  margin-top: 0px;
+  box-shadow: 0 0 20px rgba(75, 88, 112, 0.7);
 }
 
 .form {
@@ -56,45 +78,77 @@ body, html {
 }
 
 .inputText {
-  width: 95%;
+  width: 100%;
   padding: 0.75rem;
-  border: none;
+  border: 1px solid #3C3C3C;
   border-radius: 5px;
-  background-color: #3C3C3C;
+  background-color: #2C2C2C;
   color: #E0E0E0;
   font-size: 1rem;
+  box-sizing: border-box;
+}
+
+.inputText:focus {
+  outline: none;
+  border-color: #6da6e7;
+  box-shadow: 0 0 0 2px rgba(109, 166, 231, 0.2);
 }
 
 .inputText::placeholder {
   color: #A2A2A2;
 }
 
-.button {
+.submitButton {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px; 
+  font-weight: bolder;
+  justify-content: center;
   background-color: #6da6e7;
   color: white;
   border: none;
   border-radius: 5px;
   padding: 0.75rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
-.button:hover {
+.submitButton:hover {
   background-color: #3A7BCE;
 }
 
 .backButton {
-  background-color: transparent;
-  border: 2px solid #4A90E2;
-  color: #4A90E2;
+  background-color: #5685ba;
+  border: 2px solid #2e5a81;
+  color: #f2f2f3;
+  font-weight: bolder;
+  font-size: .8rem;
   padding: 0.5rem 1rem;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
   transition: all 0.3s;
 }
 
 .backButton:hover {
+  background-color: #4A90E2;
+  color: white;
+}
+
+.refButton {
+  background-color: #5685ba;
+  border: 2px solid #2e5a81;
+  color: #f2f2f3;
+  font-weight: bolder;
+  font-size: .8rem;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s;
+  margin-top: 1rem; 
+}
+
+.refButton:hover {
   background-color: #4A90E2;
   color: white;
 }
@@ -107,4 +161,127 @@ body, html {
 .successText {
   color: #4CAF50;
   margin-top: 0.5rem;
+  text-align: center;
 }
+
+.referralSection {
+  position: fixed;
+  top: 150%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 500px;
+  background-color: #1e1e1e;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  transition: top 0.5s ease-in-out;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  padding: 2rem;
+  max-width: 550px;
+}
+
+.referralSection.show {
+  top: 50%;
+  opacity: 1;
+  visibility: visible;
+  width: 80vw; 
+  border-radius: 20px; 
+}
+
+.referralTitle {
+  font-size: 1.2rem;
+  color: #E0E0E0;
+  margin-bottom: 0.5rem;
+}
+
+.referralExplainer {
+  font-size: 0.9rem;
+  color: #A2A2A2;
+  margin-bottom: 1rem;
+}
+
+.referralLinkContainer {
+  display: flex;
+  align-items: center;
+  background-color: #3C3C3C;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.referralLink {
+  flex-grow: 1;
+  padding: 0.75rem;
+  border: none;
+  background-color: transparent;
+  color: #E0E0E0;
+  font-size: 0.9rem;
+}
+
+.copyButton {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  background-color: #6da6e7;
+  color: white;
+  border: none;
+  padding: 0.75rem 1rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.copyButton:hover {
+  background-color: #3A7BCE;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  color: #E0E0E0;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.closeButton:hover {
+  color: #FF6B6B;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+  z-index: 999;
+}
+
+.overlay.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.buttonContainer{
+  display: inline-flex;
+  justify-content: space-between;
+  width: 300px;
+  margin-top: 1rem;
+}
+
+.referralExplainer {
+  font-size: 0.9rem;
+  color: #A2A2A2;
+  margin-bottom: 1.5rem;
+}
+
