--- a/src/frontend/pages/JobsPage/jobsPage.module.css
+++ b/src/frontend/pages/JobsPage/jobsPage.module.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .container {
   min-height: 100vh;
   padding-top: 40px;
   padding-bottom: 40px;
-  padding-left: 40px !important;
-  padding-right: 40px !important;
+  padding-left: 50px !important;
+  padding-right: 50px !important;
 }
 
 .headerPaper {
@@ -164,6 +165,70 @@
 
 .activeSlider {
   color: #e1e1e1;
+}
+
+.header{
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 10px;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  color:#2fb5f4;
+  text-shadow: 0 0 10px rgba(122, 182, 207, 0.516);
+  position: relative;
+  overflow: hidden;
+  }
+  
+  .header::before {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+      to bottom right,
+      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0.05) 25%,
+      transparent 50%
+    );
+    transform: rotate(45deg);
+    pointer-events: none;
+    z-index: 1;
+    animation: shimmer 3s infinite linear;
+  }
+  
+  @keyframes shimmer {
+    0% {
+      transform: translateX(-100%) rotate(45deg);
+    }
+    100% {
+      transform: translateX(100%) rotate(45deg);
+    }
+  }
+  
+  .header::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, transparent, #00a0e9, transparent);
+  }
+  
+
+.subheader{
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+  color: rgba(255, 255, 255, 0.819); 
 }
 
 .slider {
