--- a/src/frontend/pages/FirstPage/welcome.module.css
+++ b/src/frontend/pages/FirstPage/welcome.module.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
 
 .container {
   position: relative;
@@ -15,7 +17,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.1);
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 100%);
   backdrop-filter: blur(5px);
   display: flex;
   flex-direction: column;
@@ -144,6 +146,8 @@
 }
 
 .description {
+  font-family: 'Lexend'; 
+  font-weight: light;
   font-size: 1.5rem;
   line-height: 1.5;
   color: #ccc;
