--- a/src/frontend/pages/LoginPage/login.module.css
+++ b/src/frontend/pages/LoginPage/login.module.css
@@ -7,16 +7,24 @@ body, html {
   background-color: #1E1E1E;
 }
 
+.background {
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.861) 100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .container {
   margin: 100px auto;
   padding: 32px;
   max-width: 400px;
-  background-color: rgba(45, 45, 45, 0.3) !important;
-  border-radius: 24px;
-  box-shadow: 0 0 70px rgba(90, 105, 113, 0.3);
+  background: radial-gradient(circle, rgba(45, 45, 45, 0.948) 0%, rgba(45, 45, 45, 0) 70%) !important;
+  border-radius: 40px;
   text-align: center;
   color: #E0E0E0;
-  backdrop-filter: blur(4px);
 }
 
 .logo {
